k8s/api-gateway-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway-pod
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: seanfangdev/my-k8s-demo-api_gateway_service:v1
        ports:
        - containerPort: 5001

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
