k8s/order-processing-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-processing-deployment
  labels:
    app: order-processing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-processing
  template:
    metadata:
      name: order-processing-pod
      labels:
        app: order-processing
    spec:
      containers:
      - name: order-processing
        image: seanfangdev/my-k8s-demo-order_processing_service:v1
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: order-processing-service
spec:
  selector:
    app: order-processing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
