k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-k8s-demo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: ingressexample.com
    http:
      paths:
      - pathType: Prefix
        path: /api/?(.*)
        backend:
          service:
            name: api-gateway-service
            port:
              number: 5001
      - pathType: Prefix
        path: /?(.*)
        backend:
          service:
            name: client-service
            port:
              number: 3000
